fix image alignment in table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -705,6 +705,10 @@ main {
     margin: 10px 0;
 }
 
+.article-wrapper td img {
+    display: initial;
+}
+
 .article-wrapper h1 {
     font-size: 48px;
 }
